change name at composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "codeigniter4/appstarter",
+    "name": "nicepay/nicepay-codeigniter",
     "description": "CodeIgniter4 starter app",
     "license": "MIT",
     "type": "project",
