--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,16 @@
         "source": "https://github.com/codeigniter4/CodeIgniter4",
         "slack": "https://codeigniterchat.slack.com"
     },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/nicepay/nicepay-codeigniter"
+        }
+    ],
     "require": {
         "php": "^8.1",
-        "codeigniter4/framework": "^4.0"
+        "codeigniter4/framework": "^4.0",
+         "nicepay/nicepay-codeigniter": "dev-main"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9",
