--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "require": {
         "php": "^8.1",
         "codeigniter4/framework": "^4.0",
-         "nicepay/nicepay-codeigniter": "dev-main"
+        "nicepay/nicepay-codeigniter": "^1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9",
