--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,7 @@
     ],
     "require": {
         "php": "^8.1",
-        "codeigniter4/framework": "^4.0",
-        "nicepay/nicepay-codeigniter": "^1.0"
+        "codeigniter4/framework": "^4.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9",
